test/regress/coverage_token_expected.test
; Coverage test for token.cc line 463
; Non-alpha, non-underscore char in expression triggers expected()

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --limit "^" -> 1
__ERROR__
While parsing value expression:
  ^

Error: Invalid char '^'
end test
